--- a/WED201c_RE_FA24_519879/PaperNo_2/All/Resource/index.html
+++ b/WED201c_RE_FA24_519879/PaperNo_2/All/Resource/index.html
@@ -7,7 +7,7 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <!--Embed your css here-->
-    <link href="./css/styleindex.css" rel="stylesheet" />
+    <link rel="stylesheet" href="./css/styleindex.css" />
   </head>
 
   <body>
